# mem0-mcp-for-pm

./: .gitignore  Host_inst.md  README.md  debug_wrapper.py  main.py  mem0-mcp-for-pm  mem0_mcp_standalone.py  mem0_mcp_wrapper.py  pyproject.toml  setup.py  test_mcp_server.py  test_mem0_server.py
.idx/: airules.md  dev.nix
mem0-mcp-for-pm/mem0_mcp/: __init__.py  __main__.py  server.py
mem0_mcp/: server.py
reference/: sample.md
src/: __init__.py  __main__.py
src/mcp_threads/: __main__.py
src/mem0_mcp_pm/: __init__.py  __main__.py  server.py
src/mem0mcp/: __init__.py  __main__.py  server.py
