[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-mcp"
version = "0.1.0"
description = "A simple MCP server using stdio transport"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}  # 注：将来的には "MIT" の形式が推奨されます
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.scripts]
simple-mcp = "simple_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}  # この行を追加